--- a/index.html
+++ b/index.html
@@ -2,9 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    
+    <!-- Favicon settings -->
+    <link rel="icon" href="/jijah-16.png" />
+    <link rel="shortcut icon" href="/favicon.ico" />
+    <link rel="apple-touch-icon" href="/jijah-16.png" />
+    
+    <title>Congratulations Nur Fadiyah Azzizah</title>
   </head>
   <body>
     <div id="root"></div>
